--- a/css/color-4.css
+++ b/css/color-4.css
@@ -67,7 +67,7 @@ blockquote {
 }
 
 .art-slider-navigation .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: #64B5F6;
+  background-color: #3e02e2;
 }
 
 .fancybox-progress {
@@ -95,7 +95,7 @@ blockquote {
 }
 
 .art-pagination .art-pagination-center a.art-active-pag {
-  color: #64B5F6l
+  color: #64B5F6;
 }
 
 .art-preloader-load path:last-child {
