--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -69,6 +69,12 @@ h6 {
   padding: 0 30px;
   position: relative;
 }
+
+.container-fluid1 {
+  overflow: hidden;
+  padding: 0 30px;
+  position: relative;
+}
 /* ----- buttons frame ----- */
 .art-buttons-frame {
   & a {
