--- a/scss/_markup.scss
+++ b/scss/_markup.scss
@@ -253,6 +253,10 @@ app marcup (after 920px)
     padding-left: 15px;
     padding-right: 15px;
   }
+  .container-fluid1 {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   /* ----- preloader ----- */
   .art-preloader {
     margin: 0;
