added a contact form field

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,10 @@ h6 {
   margin-left: 316px;
 }
 
+.art-submit-frame a{
+  margin-left: 131px;
+}
+
 
 
 /* ----- suptitle ----- */
@@ -448,11 +452,13 @@ button
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
-
 .art-btn2 {
   text-transform: uppercase;
   -webkit-box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
+  color: #ffffff;
+  background: #1DB954
+;
   letter-spacing: 1.5px;
   font-weight: 600;
   display: -webkit-inline-box;
@@ -467,6 +473,7 @@ button
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
+
 .art-btn span {
   -ms-flex-item-align: center;
   align-self: center;
@@ -495,12 +502,23 @@ button
   font-size: 11px;
   padding: 0 35px;
 }
+.art-btn2.art-btn2-md {
+  height: 45px;
+  font-size: 11px;
+  padding: 0 35px;
+}
+
 .art-btn.art-btn-sm {
   height: 40px;
   font-size: 11px;
   padding: 0 30px;
 }
 .art-btn1.art-btn1-sm {
+  height: 40px;
+  font-size: 11px;
+  padding: 0 30px;
+}
+.art-btn2.art-btn2-md {
   height: 40px;
   font-size: 11px;
   padding: 0 30px;
@@ -514,6 +532,11 @@ button
   color: #111111;
 }
 .art-btn1:hover {
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+  color: #111111
+}
+.art-btn2:hover {
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
   color: #111111
@@ -2305,15 +2328,17 @@ content
 }
 
 /* ----- contact form ----- */
+/* TEXT INPUT SIZE */
 .art-form-field input,
 .art-form-field textarea {
   height: 50px;
   width: 100%;
-  background: linear-gradient(159deg, #252532 0%, #23232d 100%);
+  /* form colors */
+  background: linear-gradient(159deg, #4e4e4e 0%, #38383a 100%);
   border: none;
   color: #fafafc;
-  padding-left: 65px;
-  padding-right: 15px;
+  padding-left: 60px;
+  padding-right: 10px;
   -webkit-box-shadow: inset 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   box-shadow: inset 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   margin-bottom: 0;
@@ -2334,14 +2359,14 @@ content
 }
 
 ::placeholder {
-  color: #646466;
+  color: rgb(255, 255, 255);
 }
 
 .art-form-field textarea {
-  padding-left: 15px;
-  padding-top: 15px;
-  height: 150px;
-  border-left: solid 50px #1d1d1d;
+  padding-left: 10px;
+  padding-top: 10px;
+  height: 100px;
+  border-left: solid 50px #3a3a3a;;
 }
 .art-form-field textarea.art-active {
   border-color: #1DB954
@@ -2368,13 +2393,14 @@ content
   margin-bottom: 30px;
 }
 
+/* LOGO TEXT INPUT */
 .art-contact-form label {
   text-align: center;
-  color: #8c8c8e;
+  color: #ffffff;
   position: absolute;
   height: 50px;
   width: 50px;
-  background: #1d1d1d;
+  background: #3a3a3a;
   top: 0;
   left: 0;
   padding: 0 15px;
