--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -376,6 +376,42 @@ button
     color: $content-color;
   }
 }
+.art-btn2 {
+  text-transform: uppercase;
+  box-shadow: $shadow-2;
+  color: $info-bar-1-color;
+  background: $main-color;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+  display: inline-flex;
+  justify-content: center;
+  align-content: center;
+  border: none;
+  transition: $tr-md;
+
+  & span {
+    align-self: center;
+    transition: $tr-sm;
+  }
+
+  &.art-btn2-md {
+    height: 45px;
+    font-size: 11px;
+    padding: 0 35px;
+  }
+
+  &.art-btn2-sm {
+    height: 40px;
+    font-size: 11px;
+    padding: 0 30px;
+  }
+
+  &:hover {
+    transform: translateY(-2px);
+    color: $content-color;
+  }
+}
+
 /* ------------------------------
 
 space
