ready for heroku launch

--- a/css/style.css
+++ b/css/style.css
@@ -175,8 +175,9 @@ h6 {
   margin-left: 316px;
 }
 
+/* send button placement */
 .art-submit-frame a{
-  margin-left: 131px;
+  margin-left: 133px;
 }
 
 
