--- a/css/style.css
+++ b/css/style.css
@@ -1260,7 +1260,7 @@ info bar
   height: 15px;
   width: 15px;
   /* status button */
-  background: #00FF00;
+  background: #00ff00;
   border-radius: 50%;
   z-index: 0;
   -webkit-transition: 0.4s ease-in-out;
