--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,27 @@ common
 /* ----- fonts ----- */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-/* ----- text defaults ----- */
+/* ----- text defaults ----- yuhhh */
+img.animated-gif {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 95%;
+  width: 95%;
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 5px;
+  grid-row-gap: 0px;
+}
+
+.textcenter {
+  text-align: center;
+}
+
 body {
   color: #8c8c8e;
   font-size: 12px;
@@ -164,11 +184,9 @@ h6 {
   position: relative;
 }
 
-
 /* ----- buttons frame ----- */
 .art-buttons-frame a {
   margin-left: 1px;
-
 }
 
 .new-art-buttons-frame {
@@ -176,11 +194,9 @@ h6 {
 }
 
 /* send button placement */
-.art-submit-frame a{
+.art-submit-frame a {
   margin-left: 133px;
 }
-
-
 
 /* ----- suptitle ----- */
 .art-el-subtitle {
@@ -251,8 +267,7 @@ a:focus {
 blockquote {
   margin-top: 30px;
   margin-bottom: 30px;
-  background: #1DB954
-;
+  background: #1db954;
   color: #111111;
   padding: 30px;
   padding-left: 35px;
@@ -306,8 +321,7 @@ blockquote:after {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  border: solid 2px #1DB954
-;
+  border: solid 2px #1db954;
   background: transparent;
   -webkit-box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
   box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
@@ -345,12 +359,10 @@ link
   transform: translateX(5px);
 }
 .art-link.art-color-link {
-  color: #1DB954
-;
+  color: #1db954;
 }
 .art-link.art-color-link:hover {
-  color: #1DB954
-;
+  color: #1db954;
   text-shadow: 0 0 3px rgba(250, 250, 252, 0.4);
   -webkit-transform: translateX(5px);
   transform: translateX(5px);
@@ -415,8 +427,7 @@ button
   text-transform: uppercase;
   -webkit-box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
-  color: #1DB954
-;
+  color: #1db954;
   background: #ffffff;
   letter-spacing: 1.5px;
   font-weight: 600;
@@ -437,8 +448,7 @@ button
   -webkit-box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   color: #ffffff;
-  background: #1DB954
-;
+  background: #1db954;
   letter-spacing: 1.5px;
   font-weight: 600;
   display: -webkit-inline-box;
@@ -458,8 +468,7 @@ button
   -webkit-box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
   color: #ffffff;
-  background: #1DB954
-;
+  background: #1db954;
   letter-spacing: 1.5px;
   font-weight: 600;
   display: -webkit-inline-box;
@@ -535,12 +544,12 @@ button
 .art-btn1:hover {
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
-  color: #111111
+  color: #111111;
 }
 .art-btn2:hover {
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
-  color: #111111
+  color: #111111;
 }
 
 /* ------------------------------
@@ -640,8 +649,7 @@ app marcup
     left top,
     left bottom,
     from(rgba(30, 30, 40, 0.93)),
-    /* not really important */
-    color-stop(70%, rgba(30, 30, 40, 0.96)),
+    /* not really important */ color-stop(70%, rgba(30, 30, 40, 0.96)),
     color-stop(80%, rgba(30, 30, 40, 0.99)),
     to(#1e1e28)
   );
@@ -701,8 +709,7 @@ app marcup
   stroke: #111111;
 }
 .art-preloader-load path:last-child {
-  stroke: #1DB954
-;
+  stroke: #1db954;
 }
 
 /* ----- scroll frame ----- */
@@ -777,7 +784,6 @@ app marcup
   /* ----- content ----- */
   /* ----- menu bar ----- */
 }
-
 
 .art-app .art-app-wrapper .art-app-container .art-info-bar {
   background: #1d1d1d;
@@ -1368,8 +1374,7 @@ info bar
   transition: 0.4s ease-in-out;
 }
 .art-info-bar .art-name:hover a {
-  color: #1DB954
-;
+  color: #1db954;
 }
 .art-info-bar .art-lang-skills {
   display: -webkit-box;
@@ -1452,8 +1457,7 @@ info bar
   content: "\f00c";
   margin-right: 5px;
   font-size: 9px;
-  color: #1DB954
-;
+  color: #1db954;
   margin-right: 10px;
 }
 .art-info-bar .art-links-frame {
@@ -1508,16 +1512,14 @@ info bar
   stroke: #111111;
 }
 .art-line-progress path:last-child {
-  stroke: #1DB954
-;
+  stroke: #1db954;
 }
 
 .art-cirkle-progress path:first-child {
   stroke: #111111;
 }
 .art-cirkle-progress path:last-child {
-  stroke: #1DB954
-;
+  stroke: #1db954;
 }
 
 /* ------------------------------
@@ -1757,8 +1759,7 @@ menu bar
   transition: 0.4s ease-in-out;
 }
 .art-menu-bar .art-language-change li.art-active-lang {
-  background-color: #1DB954
-;
+  background-color: #1db954;
   -webkit-box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
   box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
 }
@@ -1933,8 +1934,7 @@ content
 }
 .art-code i {
   font-style: normal;
-  color: #1DB954
-;
+  color: #1db954;
 }
 
 /* ----- counters ----- */
@@ -1953,16 +1953,14 @@ content
   min-width: 60px;
 }
 .art-counter-frame .art-counter-box .art-counter {
-  color: #fdfffe
-;
+  color: #fdfffe;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   font-size: 22px;
 }
 .art-counter-frame .art-counter-box .art-counter-plus {
   margin-left: 3px;
-  color: #1DB954
-;
+  color: #1db954;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   font-size: 22px;
@@ -2028,8 +2026,7 @@ content
   padding: 2px;
   width: 200px;
   text-align: center;
-  background: #1DB954
-;
+  background: #1db954;
 }
 .art-price .art-price-body {
   position: relative;
@@ -2057,8 +2054,7 @@ content
 }
 .art-price .art-price-body .art-price-cost .art-number {
   font-size: 32px;
-  color: #1DB954
-;
+  color: #1db954;
   font-weight: 600;
   margin-bottom: 0;
 }
@@ -2090,8 +2086,7 @@ content
   content: "\f00c";
   margin-right: 5px;
   font-size: 9px;
-  color: #1DB954
-;
+  color: #1db954;
 }
 .art-price .art-price-body .art-price-list li.art-empty-item {
   opacity: 0.3;
@@ -2102,8 +2097,7 @@ content
   content: "\f00d";
   margin-right: 5px;
   font-size: 9px;
-  color: #1DB954
-;
+  color: #1db954;
 }
 .art-price .art-price-body .art-link {
   margin: 0;
@@ -2164,8 +2158,7 @@ content
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #1DB954
-;
+  color: #1db954;
 }
 .art-testimonial .art-testimonial-footer .art-star-rate li {
   list-style-type: none;
@@ -2212,8 +2205,7 @@ content
 .art-slider-navigation
   .swiper-pagination-bullet.swiper-pagination-bullet-active {
   width: 20px;
-  background-color: #1DB954
-;
+  background-color: #1db954;
   opacity: 1;
 }
 .art-slider-navigation .art-slider-nav-frame {
@@ -2272,8 +2264,7 @@ content
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  border: solid 3px #1DB954
-;
+  border: solid 3px #1db954;
   background: #1e1e28;
   -webkit-box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
   box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
@@ -2367,15 +2358,13 @@ content
   padding-left: 10px;
   padding-top: 10px;
   height: 100px;
-  border-left: solid 50px #3a3a3a;;
+  border-left: solid 50px #3a3a3a;
 }
 .art-form-field textarea.art-active {
-  border-color: #1DB954
-;
+  border-color: #1db954;
 }
 .art-form-field textarea:focus {
-  border-color: #1DB954
-;
+  border-color: #1db954;
 }
 
 .art-contact-form .art-input:focus {
@@ -2384,8 +2373,7 @@ content
 
 .art-contact-form .art-input.art-active + label,
 .art-contact-form .art-input:focus + label {
-  background: #1DB954
-;
+  background: #1db954;
   color: #1d1d1d;
 }
 
@@ -2520,8 +2508,7 @@ content
   padding: 0 5px;
 }
 .art-pagination .art-pagination-center a.art-active-pag {
-  color: #1DB954
-;
+  color: #1db954;
 }
 .art-pagination .art-link {
   margin: 0;
@@ -2855,8 +2842,7 @@ portfolio
 }
 
 .fancybox-progress {
-  background: #1DB954
-;
+  background: #1db954;
   z-index: 999999999999999999;
 }
 
@@ -2872,8 +2858,7 @@ portfolio
 }
 
 .fancybox-thumbs__list a:before {
-  border-color: #1DB954
-;
+  border-color: #1db954;
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
@@ -2977,7 +2962,6 @@ content (after 920px)
     max-width: 200px;
     margin: 0 auto;
   }
-
 
   .art-banner
     .art-banner-overlay
