--- a/css/style.css
+++ b/css/style.css
@@ -173,25 +173,37 @@ h6 {
 }
 
 /* ----- container ----- */
-.container-fluid {
-  overflow: hidden;
-  padding: 0 30px;
-  position: relative;
-  margin-bottom: 30px;
-}
-.container-fluid1 {
-  overflow: hidden;
-  padding: 0 30px;
-  position: relative;
-}
 
 /* ----- buttons frame ----- */
 .art-buttons-frame a {
-  margin-left: 1px;
+  margin: center;
 }
 
 .new-art-buttons-frame {
-  margin-left: 316px;
+  margin: 0;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.new-art-buttons-frame1 {
+  margin: 0;
+  position: absolute;
+  top: 200%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.new-art-buttons-frame2 {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 /* send button placement */
@@ -966,9 +978,9 @@ app marcup (after 920px)
     padding-left: 15px;
     padding-right: 15px;
   }
-  .container-fluid1 {
-    padding-left: 15px;
-    padding-right: 15px;
+
+  .inline-center {
+    text-align: center;
   }
 
   /* ----- preloader ----- */
@@ -3249,6 +3261,62 @@ html.is-animating .fade-left {
 }
 
 .skills .skills-icons li:hover {
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+}
+
+/* Project Skills */
+
+.skillz {
+  padding: 0px;
+}
+
+.skillz h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.skillz .skillz-icons {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.skillz .skillz-icons svg {
+  margin: 20 px;
+  width: 45px;
+}
+
+.skillz .skillz-icons li {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: white;
+  font-size: 0rem;
+  margin: 10px;
+}
+
+.skillz .skillz-icons li:hover {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
 }
