--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -1,33 +1,67 @@
 .skills {
-    padding: 3rem 0;
-    h2 {
-      text-align: center;
-      margin-bottom: 3rem;
+  padding: 3rem 0;
+  h2 {
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+
+  .skills-icons {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 700px;
+    margin: 0 auto;
+    svg {
+      margin: 0.75rem;
+      width: 70px;
     }
-  
-    .skills-icons {
-      list-style-type: none;
+    li {
+      transition: 0.3s;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
       justify-content: center;
-      max-width: 700px;
-      margin: 0 auto;
-      svg {
-        margin: 0.75rem;
-        width: 70px;
-      }
-      li {
-        transition: 0.3s;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        font-size: 1rem;
-        margin: 0 0.5rem 1rem 0.5rem;
-      }
-      li:hover {
-        transform: scale(1.3);
-      }
+      align-items: center;
+      color: white;
+      font-size: 1rem;
+      margin: 0 0.5rem 1rem 0.5rem;
+    }
+    li:hover {
+      transform: scale(1.3);
     }
   }
+}
+
+.skillz {
+  padding: 3rem 0;
+  h2 {
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+
+  .skillz-icons {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 700px;
+    margin: 0 auto;
+    svg {
+      margin: 0.75rem;
+      width: 70px;
+    }
+    li {
+      transition: 0.3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 1rem;
+      margin: 0 0.5rem 1rem 0.5rem;
+    }
+    li:hover {
+      transform: scale(1.3);
+    }
+  }
+}
