--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,8 @@ h6 {
 .art-lg-text1 {
   font-size: 16px;
   text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .art-white {
@@ -211,7 +213,7 @@ h6 {
 }
 
 .new-art-buttons-frame2 {
-  margin: 0;
+  margin-top: 5px;
   position: absolute;
   top: 75%;
   left: 50%;
@@ -1850,7 +1852,16 @@ content
   -ms-flex-item-align: center;
   align-self: center;
   position: relative;
-  margin-bottom: 10px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
+.art-section-title .art-title-frame2 {
+  -ms-flex-item-align: center;
+  align-self: center;
+  position: relative;
+  margin-top: -25px;
+  margin-bottom: -5px;
 }
 .art-section-title .art-right-frame {
   padding-bottom: 30px;
